--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "jQuery": "~2.1.1",
-    "normalize-css": "~3.0.1"
+    "normalize-css": "~3.0.1",
+    "animate.css": "~3.2.0"
   }
 }
