--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-autoprefixer": "0.0.8",
     "gulp-concat": "^2.3.4",
     "gulp-connect": "^2.0.6",
+    "gulp-debug": "^1.0.1",
     "gulp-image-resize": "^0.5.0",
     "gulp-minify-css": "^0.3.7",
     "gulp-open": "^0.2.8",
