--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "bower": "^1.3.8",
     "del": "^0.1.1",
     "firebase-tools": "^1.1.1",
-    "gulp": "^3.8.6",
-    "gulp-autoprefixer": "0.0.8",
+    "gulp": "^3.8.10",
+    "gulp-autoprefixer": "^2.0.0",
     "gulp-concat": "^2.3.4",
     "gulp-connect": "^2.0.6",
     "gulp-image-resize": "^0.5.0",
@@ -29,6 +29,7 @@
     "gulp-usemin": "^0.3.7",
     "gulp-webpack": "^0.2.0",
     "harp": "^0.12.1",
+    "lodash": "^2.4.1",
     "main-bower-files": "^1.0.2",
     "q": "^1.0.1"
   }
