--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,6 @@
     "underscore": "~1.7.0",
     "jquery.scrollTo": "~1.4.13",
     "jquery-validation": "~1.13.1",
-    "moment": "~2.8.4",
-    "Buttons": "~2.0.0"
+    "moment": "~2.8.4"
   }
 }
