--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-autoprefixer": "^2.0.0",
     "gulp-concat": "^2.3.4",
     "gulp-connect": "^2.0.6",
+    "gulp-flatten": "0.0.4",
     "gulp-image-resize": "^0.5.0",
     "gulp-minify-css": "^0.3.7",
     "gulp-open": "^0.2.8",
