--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
     "gulp-open": "^0.2.8",
     "gulp-rename": "^1.2.0",
     "gulp-rev": "^1.0.0",
-    "gulp-sass": "^0.7.2",
+    "gulp-sass": "^1.3.3",
     "gulp-serve": "^0.2.0",
     "gulp-uglify": "^0.3.1",
     "gulp-usemin": "^0.3.7",
     "gulp-webpack": "^0.2.0",
-    "harp": "^0.12.1",
+    "harp": "^0.15.2",
     "lodash": "^2.4.1",
     "main-bower-files": "^1.0.2",
+    "node-sass": "^2.0.1",
     "q": "^1.0.1"
   }
 }
